@@ -8,7 +8,7 @@ set ARCHIVE=%~dp0server.jsa
 if not defined JAVA_OPTS (
     set JAVA_OPTS=-Xms256m -Xmx512m -XX:+UseZGC
 )
-set JAVA_OPTS=%JAVA_OPTS% -Dcom.sun.management.jmxremote=true -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.local.only=true
+set JAVA_OPTS=%JAVA_OPTS% --enable-native-access=ALL-UNNAMED -Dcom.sun.management.jmxremote=true -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.local.only=true
 
 if exist "%ARCHIVE%" (
     set JAVA_OPTS=%JAVA_OPTS% -Xshare:on -XX:SharedArchiveFile="%ARCHIVE%"
